# spin-trigger-call

./: Cargo.toml  Makefile  README.md  spin-pluginify.toml
example/: Cargo.toml  spin.toml
example/src/: bindings.rs  lib.rs
example/wit/: world.wit
src/: lib.rs  main.rs
